--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...fa99402](https://github.com/cri-o/cri-o/compare/v1.23.0...fa994025276072c930e99c7bff91a675f9cb8e66) on Fri, 29 Apr 2022 19:52:20 UTC.
+[v1.23.0...c17baa0](https://github.com/cri-o/cri-o/compare/v1.23.0...c17baa0dd7701bfd9bed58cb24aef39c1c125cc0) on Mon, 02 May 2022 17:59:37 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz)
-- [cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum)
-- [cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz)
-- [cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fa994025276072c930e99c7bff91a675f9cb8e66.tar.gz.sha256sum)
+- [cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz)
+- [cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum)
+- [cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz)
+- [cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c17baa0dd7701bfd9bed58cb24aef39c1c125cc0.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -81,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5775](https://github.com/cri-o/cri-o/pull/5775), [@manuelluis](https://github.com/manuelluis))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Forbid AppArmor profiles with the name `localhost/`. ([#5655](https://github.com/cri-o/cri-o/pull/5655), [@saschagrunert](https://github.com/saschagrunert))
+ - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5783](https://github.com/cri-o/cri-o/pull/5783), [@haircommander](https://github.com/haircommander))
  - Libcni: handle empty version when parsing version (https://github.com/containernetworking/cni/pull/893). Without this, Delete failed for empty-version configs, which was a regression from v0.8.0. ([#5830](https://github.com/cri-o/cri-o/pull/5830), [@aojea](https://github.com/aojea))
 
 #### Uncategorized
