--- a/v1.22.3.md
+++ b/v1.22.3.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.22.2](#changelog-since-v1222)
     - [Changes by Kind](#changes-by-kind)
       - [Bug or Regression](#bug-or-regression)
+      - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -11,14 +12,14 @@
 # CRI-O v1.22.3
 
 The release notes have been generated for the commit range
-[v1.22.2...7cf77a9](https://github.com/cri-o/cri-o/compare/v1.22.2...7cf77a97be81b6f6746f66196e35a9af96f3c99c) on Wed, 27 Apr 2022 20:36:14 UTC.
+[v1.22.2...388405c](https://github.com/cri-o/cri-o/compare/v1.22.2...388405c4413c3322fadb53b15f163c0fc531c73b) on Wed, 04 May 2022 18:32:03 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7cf77a97be81b6f6746f66196e35a9af96f3c99c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7cf77a97be81b6f6746f66196e35a9af96f3c99c.tar.gz)
-- [cri-o.arm64.7cf77a97be81b6f6746f66196e35a9af96f3c99c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7cf77a97be81b6f6746f66196e35a9af96f3c99c.tar.gz)
+- [cri-o.amd64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz)
+- [cri-o.arm64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz)
 
 ## Changelog since v1.22.2
 
@@ -26,6 +27,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Fix a segfault when multiple container stops come in for the same container ([#5803](https://github.com/cri-o/cri-o/pull/5803), [@haircommander](https://github.com/haircommander))
+
+#### Uncategorized
+ - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5829](https://github.com/cri-o/cri-o/pull/5829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
